# Oil

./: README.md
Oil/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  pythonfunctions.cpp  pythonfunctions.h
